info alignment fixed until <1100px

--- a/client/src/components/AdminDashboard/viewprofile.css
+++ b/client/src/components/AdminDashboard/viewprofile.css
@@ -80,7 +80,7 @@
 .studentviews div {
     display: grid;
     grid-template-columns: repeat(2,1fr);
-    justify-items: start;  
+    justify-items: stretch;  
     padding-bottom: 0.6rem;
     align-items: center;
 }
